--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,12 +2,9 @@ server:
   port: 8989
 spring:
   datasource:
-#    url: jdbc:mysql://localhost:3306/cctower?useUnicode=true&characterEncoding=UTF8
-#    username: root
-#    password: Cctower0000*
-    url: jdbc:mysql://localhost:3306/cctower?useUnicode=true&characterEncoding=UTF8
-    username: jiashun
-    password: jiashun0000
+    url: jdbc:mysql://47.93.12.69:3306/cctower?useUnicode=true&characterEncoding=UTF8
+    username: root
+    password: Cctower0000*
   redis:
     host: 47.93.12.69
     port: 6379
@@ -31,6 +28,6 @@ wx:
   app-secret: b25600a51d090381e02dd4b543955641
   mch-id: 1527166311
   mch-key: MQF82fY2pbWJOvGutpa7yHaK5pSgbAPK
-  notify-url: https://www.test.cctower.cn/applet/wx-pay/pay-notify
+  notify-url: https://test.cctower.cn/applet/wx-pay/pay-notify
   key-path: /usr/local/cctower/1527166311_20190406_cert/
 
