--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,11 @@
             <artifactId>velocity</artifactId>
             <version>1.7</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
