--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>fastjson</artifactId>
             <version>${fastjson.version}</version>
         </dependency>
+        <!--  springboot整合activemq -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
+            <version>2.1.3.RELEASE</version>
+        </dependency>
         <!--阿里数据库连接池druid-->
         <dependency>
             <groupId>com.alibaba</groupId>
