--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.nuoze</groupId>
     <artifactId>cctower</artifactId>
-    <version>0.0.13</version>
+    <version>0.0.14</version>
     <name>cctower</name>
     <description>CCTower</description>
 
@@ -57,6 +57,18 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>${fastjson.version}</version>
+        </dependency>
+        <!--  导入、导出 -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.10.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.10.1</version>
         </dependency>
         <!--  springboot整合activemq -->
         <dependency>
