支付宝：沙箱环境完成

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.nuoze</groupId>
     <artifactId>cctower</artifactId>
-    <version>0.0.19</version>
+    <version>0.0.20</version>
     <name>cctower</name>
     <description>CCTower</description>
 
@@ -213,6 +213,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <!-- 作用:项目打成jar的同时将本地jar包也引入进去 -->
+                <configuration>
+                    <includeSystemScope>true</includeSystemScope>
+                </configuration>
             </plugin>
         </plugins>
     </build>
